# graphics

./: CMakeLists.txt
src/: main.cpp  main.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
